# plexdb

./: .clang-format  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  LICENSE.txt  README.md  TODO.md  plan.md  test.db
core/: CMakeLists.txt
core/aio/: aio.cpp  aio.cppm
core/arena/: arena.cpp  arena.cppm
core/argparse/: argparse.cpp  argparse.cppm  argparse.test.cpp
core/base/: base.cppm  containers.cppm  functor.cppm  math.cpp  math.cppm  string.cpp  string.cppm  string.test.cpp  types.cppm
core/blob/: blob.constraint.cppm  blob.cppm  blob.types.cppm
core/btree/: TODO.md  btree.algorithm.cppm  btree.constraint.cppm  btree.cppm  btree.detail.cpp  btree.detail.cppm  btree.iterator.cppm  btree.node.cpp  btree.node.cppm  btree.policy.cppm  btree.print.cppm  btree.slots.cppm  btree.types.cppm
core/coroutine/: base.cppm  combinators.cppm  coroutine.cppm  coroutine.test.cpp  debug.cppm  extra.cppm
core/dynamic/: containers.cppm  function.cppm  tagged_union.cppm  tagged_union.test.cpp
core/hashtable/: TODO.md
core/log/: log.cpp  log.cppm  log.test.cpp  log_abi.h
core/lsm/: TODO.md
core/macros/: CMakeLists.txt
core/memtable/: TODO.md
core/os/: aio.cpp  aio.cppm  containers.cppm  core.cpp  core.cppm  dynamic_tagged_union.cppm  dynamic_tagged_union.test.cpp  os.cppm  signal.cpp  signal.cppm  socket.cpp  socket.cppm  socket.test.cpp  sysinfo.cpp  sysinfo.cppm  sysinfo.test.cpp  thread.cpp  thread.cppm  time.cpp  time.cppm  uring.cpp  uring.cppm
core/pager/: pager.cpp  pager.cppm  pager.test.cpp  pager.transaction.cpp  pager.transaction.cppm  pager.types.cppm  pager.wal.cpp  pager.wal.cppm  wal.cpp  wal.cppm
core/plugin/: plugin.cpp  plugin.cppm  plugin.test.cpp
core/plugin_abi/: CMakeLists.txt
core/shard/: shard.test.cpp  spsc.cppm  token.cppm
core/tagged_union/: tagged_union.cppm
core/tcp/: tcp.cppm  tcp.detail.cpp  tcp.detail.cppm  tcp.test.cpp  tcp.types.cpp  tcp.types.cppm
core/test/: assert_helpers.test.cpp  log_consumer_helper.test.cpp  log_consumer_helpers.test.cpp  log_consumer_helpers.test.cppm  main.test.cpp  pager_test_helpers.test.cppm  server_test_helpers.test.cppm
core/test_macros/: CMakeLists.txt
core/threads/: threads.cpp  threads.cppm
cql/: CMakeLists.txt
cql/crc/: crc.cppm  crc.test.cpp
cql/engine/: clustering_compare.cpp  clustering_compare.cppm  column_value.cpp  column_value.cppm  column_value.test.cpp  engine.cpp  engine.cppm  evaluator.cpp  evaluator.cppm  evaluator.test.cpp  io.codec.cpp  io.codec.cppm  io.cpp  io.cppm  io.evaluator.cpp  io.evaluator.cppm  io.test.cpp  io.types.cppm  it.cpp  it.cppm  key.cpp  key.cppm  key.test.cpp  planner.cpp  planner.cppm  schema.cpp  schema.cppm  schema.types.cpp  schema.types.cppm  statements.cpp  statements.cppm  system_schema.cpp  system_schema.cppm  token.cpp  token.cppm  token.test.cpp  types.cpp  types.cppm  virtual_table.cppm
cql/entry/: main.cpp
cql/log/: log.cpp  log.cppm
cql/native/: native.blob_roundtrip.test.cpp  native.bulk_insert.test.cpp  native.cpp  native.cppm  native.test.cpp
cql/parsers/: parsers.cpp  parsers.cppm  parsers.test.cpp
cql/repl/: repl.cpp  repl.cppm  repl.test.cpp
cql/test/: cql_native_smoke.test.cpp  cql_test_helpers.test.cpp  cql_test_helpers.test.cppm
cql/test_macros/: CMakeLists.txt
docstore/: CMakeLists.txt
docstore/engine/: engine.cpp  engine.cppm  statements.cppm
docstore/entry/: main.cpp
docstore/parsers/: parsers.cpp  parsers.cppm  parsers.test.cpp
graphstore/: CMakeLists.txt
graphstore/engine/: engine.cpp  engine.cppm  statements.cppm
graphstore/entry/: main.cpp
graphstore/parsers/: parsers.cpp  parsers.cppm  parsers.test.cpp
keyvalue/: CMakeLists.txt
keyvalue/engine/: engine.cpp  engine.cppm  statements.cppm
keyvalue/entry/: main.cpp
keyvalue/glob/: glob.cpp  glob.cppm
keyvalue/log/: log.cpp  log.cppm
keyvalue/parsers/: parsers.cpp  parsers.cppm
keyvalue/protocol/: protocol.cpp  protocol.cppm
keyvalue/resp/: resp.cpp  resp.cppm  resp.protocol.cpp  resp.protocol.cppm  resp.protocol.test.cpp  resp.test.cpp
keyvalue/store/: store.cpp  store.cppm
objstore/: CMakeLists.txt
objstore/crc/: crc.cppm  crc.test.cpp
objstore/dtypes/: dtypes.cppm
objstore/engine/: dtype.cppm  engine.cpp  engine.cppm  evaluator.cppm  io.cppm  it.cpp  it.cppm  schema.cpp  schema.cppm  statements.cppm  system_schema.cpp  system_schema.cppm  types.cppm  virtual_table.cppm
objstore/entry/: main.cpp
objstore/http/: http.cpp  http.cppm  http.test.cpp
objstore/log/: log.cpp  log.cppm
objstore/native/: native.cpp  native.cppm  native.test.cpp
objstore/parser/: parser._test.cpp  parser.cpp  parser.cppm  parser.test.cpp  stl_helpers.cppm
objstore/parsers/: parsers.cpp  parsers.cppm  parsers.test.cpp
objstore/repl/: repl.cpp  repl.cppm  repl.test.cpp
objstore/server/: main.cpp  main.test.cpp  server.cpp  server.cppm  server.test.cpp
objstore/tcp/: tcp.coro.cppm  tcp.cpp  tcp.cppm  tcp.detail.cpp  tcp.detail.cppm  tcp.test.cpp  tcp.types.cpp  tcp.types.cppm
objstore/test/: assert.helper.test.cpp  assert_helpers.test.cpp  log_consumer.helper.test.cpp  log_consumer.test.cpp  parsers_error_reporter.helper.cppm  parsers_error_reporter.hpp  parsers_error_reporter.test.cpp
plexdb/: CMakeLists.txt
plexdb/arena/: arena.cpp
plexdb/argparse/: argparse.cpp  argparse.cppm  argparse.test.cpp
plexdb/base/: containers.cppm  math.cpp  math.cppm  string.cpp  string.cppm  string.test.cpp  types.cppm
plexdb/blob/: blob.cppm
plexdb/btree/: README.md  btree.cppm  btree.detail.cppm  btree.node.cpp  btree.print.cppm  btree.types.cppm
plexdb/coro/: coro.cppm  coro.test.cpp
plexdb/coroutine/: coroutine.cppm  coroutine.test.cpp
plexdb/log/: log.cpp  log.cppm  log.test.cpp  log_abi.h
plexdb/os/: containers.cppm  core.cpp  core.cppm  dynamic_tagged_union.test.cpp  event_loop.cpp  event_loop.cppm  event_loop.test.cpp  function.cppm  os.cppm  signal.cpp  signal.cppm  signal.test.cpp  socket.cpp  socket.cppm  socket.test.cpp  sysinfo.cpp  sysinfo.cppm  sysinfo.test.cpp  (+3 more)
sqlstore/: CMakeLists.txt
(+231 files in other folders)
